--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,68 +70,54 @@ a, a:hover, a:focus, a:active {
 /* Typography
 ------------------------------------------------------------ */
 body {
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 16px;
+  line-height: 24px;
   color: #565555; }
 
 h1, .alpha {
-  font-size: 123px;
-  line-height: 135px;
+  font-size: 110px;
+  line-height: 120px;
   margin-top: 0px;
-  margin-bottom: 27px; }
+  margin-bottom: 24px; }
 
 h2, .beta {
-  font-size: 76px;
-  line-height: 81px;
+  font-size: 68px;
+  line-height: 72px;
   margin-top: 0px;
-  margin-bottom: 27px;
-  font-family: Londrina Solid, cursive; }
+  margin-bottom: 24px; }
 
 h3, .gamma {
-  font-size: 47px;
-  line-height: 54px;
+  font-size: 42px;
+  line-height: 48px;
   margin-top: 0px;
-  margin-bottom: 27px; }
+  margin-bottom: 24px; }
 
 h4, .delta {
-  font-size: 29px;
-  line-height: 54px;
+  font-size: 26px;
+  line-height: 48px;
   margin-top: 0px;
   margin-bottom: 0px; }
 
 h5, .epsilon {
-  font-size: 18px;
-  line-height: 27px; }
+  font-size: 16px;
+  line-height: 24px; }
 
 h6, .zeta {
-  font-size: 11px;
-  line-height: 27px;
+  font-size: 10px;
+  line-height: 24px;
   margin-top: 0px;
   margin-bottom: 0px; }
 
 p, ul, ol {
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 16px;
+  line-height: 24px;
   margin-top: 0px;
-  margin-bottom: 27px;
-  font-family: Architects Daughter, cursive; }
+  margin-bottom: 24px;
+  font-family: Gilda Display, serif; }
 
-/*
 h1, h2, h3, h4, h5, h6 {
+  font-family: Lato, sans-serif; }
 
-	font: $font-title;
-	font-weight: light;
-	font-family: 'Londrina Solid', cursive;
- 	color: $color-text;
- }
-
- $font-title: bold helvetica 24px/2rem;
-
-
-font-size: 200%; //32px
-
- $font-body: 1rem/1rem
-*/
 /* Partials
 ------------------------------------------------------------ */
 /* --------------- Layout ---------------- */
@@ -143,7 +129,11 @@ body {
   background: url(../img/gray.png) repeat; }
 
 header {
-  height: 280px; }
+  height: 50px;
+  background: rgba(250, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  z-index: 200; }
 
 .promo {
   *zoom: 1;
@@ -171,3 +161,65 @@ header {
   background-color: #FFF;
   opacity: .5;
   position: absolute; }
+
+.index {
+  padding-top: 60px; }
+
+.flag {
+  background: rgba(250, 250, 250, 0.5); }
+
+.info {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 23.23176%;
+  background: rgba(250, 250, 250, 0.5); }
+  .info:last-child {
+    margin-right: 0; }
+
+.icon {
+  float: left;
+  display: block;
+  margin-right: 10.1484%;
+  width: 44.9258%;
+  margin-right: 0;
+  text-align: center;
+  height: 100px; }
+  .icon:last-child {
+    margin-right: 0; }
+
+.text {
+  float: left;
+  display: block;
+  margin-right: 10.1484%;
+  width: 100%;
+  margin: 8px; }
+  .text:last-child {
+    margin-right: 0; }
+
+.graphsection {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 74.41059%;
+  margin-right: 0;
+  background: rgba(250, 250, 250, 0.5); }
+  .graphsection:last-child {
+    margin-right: 0; }
+
+.pie {
+  float: left;
+  display: block;
+  margin-right: 3.16844%;
+  width: 31.22104%;
+  text-align: center;
+  padding-top: 8px; }
+  .pie:last-child {
+    margin-right: 0; }
+
+footer {
+  margin-top: 60px;
+  height: 50px;
+  background: rgba(250, 0, 0, 0.5);
+  width: 100%;
+  z-index: 200; }
