--- a/www/css/style.css
+++ b/www/css/style.css
@@ -216,6 +216,8 @@ header {
   padding-top: 8px; }
   .pie:last-child {
     margin-right: 0; }
+  .pie h3 {
+    margin-top: -157px; }
 
 footer {
   margin-top: 60px;
