--- a/www/css/style.css
+++ b/www/css/style.css
@@ -128,27 +128,49 @@ img {
 body {
   background: url(../img/gray.png) repeat; }
 
-header {
-  height: 50px;
-  background: rgba(250, 0, 0, 0.5);
-  position: fixed;
+#header {
   width: 100%;
-  z-index: 200; }
+  background-color: rgba(250, 0, 0, 0.5);
+  z-index: 100; }
+
+.intro {
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 2px solid #666;
+  margin-top: 4em; }
+  .intro:before, .intro:after {
+    content: " ";
+    display: table; }
+  .intro:after {
+    clear: both; }
+  .intro p {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%;
+    margin-bottom: 5em; }
+    .intro p:last-child {
+      margin-right: 0; }
 
 .promo {
   *zoom: 1;
   max-width: 60em;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  margin-bottom: 4em;
+  margin-top: 4em; }
   .promo:before, .promo:after {
     content: " ";
     display: table; }
   .promo:after {
     clear: both; }
 
-.map {
+#map {
   padding-top: 60px;
-  margin-bottom: -60px; }
+  margin-bottom: -60px;
+  margin-top: 5em; }
 
 .note {
   float: left;
@@ -243,7 +265,7 @@ header {
 
 footer {
   margin-top: 60px;
-  height: 50px;
-  background: rgba(250, 0, 0, 0.5);
+  height: 200px;
+  background-color: rgba(250, 0, 0, 0.5);
   width: 100%;
   z-index: 200; }
