--- a/www/css/style.css
+++ b/www/css/style.css
@@ -99,24 +99,33 @@ h4, .delta {
   margin-bottom: 0px; }
 
 h5, .epsilon {
-  font-size: 16px;
-  line-height: 24px; }
-
-h6, .zeta {
-  font-size: 10px;
-  line-height: 24px;
+  font-size: 26px;
+  line-height: 48px;
   margin-top: 0px;
   margin-bottom: 0px; }
+
+h6, .zeta {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 24px;
+  margin-bottom: 24px; }
 
 p, ul, ol {
   font-size: 16px;
   line-height: 24px;
   margin-top: 0px;
   margin-bottom: 24px;
-  font-family: Gilda Display, serif; }
+  font-family: Arvo, sans-serif; }
+
+a {
+  font-size: 26px;
+  line-height: 48px;
+  margin-top: 0px;
+  margin-bottom: 24px;
+  font-family: Arvo, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Lato, sans-serif; }
+  font-family: Arvo, sans-serif; }
 
 /* Partials
 ------------------------------------------------------------ */
@@ -126,60 +135,152 @@ img {
   vertical-align: baseline; }
 
 body {
-  background: url(../img/gray.png) repeat; }
+  background: url(../img/subtle_grunge.png) repeat; }
 
-#header {
+#fixedbar {
+  display: none;
+  position: fixed;
+  top: 0;
   width: 100%;
-  background-color: rgba(250, 0, 0, 0.5);
+  height: 50px;
+  background: rgba(255, 255, 255, 0.75);
   z-index: 100; }
 
-.intro {
+#fixednav {
+  display: block;
+  width: 710px;
+  margin: 5 auto;
+  padding: 0px 25px;
+  margin-top: 1em; }
+
+.countrySelector {
   *zoom: 1;
   max-width: 60em;
   margin-left: auto;
   margin-right: auto;
-  border-bottom: 2px solid #666;
-  margin-top: 4em; }
-  .intro:before, .intro:after {
+  width: 100%;
+  top: 1em; }
+  .countrySelector:before, .countrySelector:after {
     content: " ";
     display: table; }
-  .intro:after {
+  .countrySelector:after {
     clear: both; }
-  .intro p {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 48.82117%;
-    margin-bottom: 5em; }
-    .intro p:last-child {
-      margin-right: 0; }
 
-.promo {
+#header {
   *zoom: 1;
   max-width: 60em;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 4em;
-  margin-top: 4em; }
-  .promo:before, .promo:after {
+  background-color: rgba(250, 0, 0, 0.5);
+  z-index: 100; }
+  #header:before, #header:after {
     content: " ";
     display: table; }
-  .promo:after {
+  #header:after {
     clear: both; }
 
-#map {
-  padding-top: 60px;
-  margin-bottom: -60px;
-  margin-top: 5em; }
+#select {
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  min-width: 500px;
+  width: 100%;
+  margin: 0em 0 0em 0;
+  z-index: 10; }
+  #select:before, #select:after {
+    content: " ";
+    display: table; }
+  #select:after {
+    clear: both; }
 
-.note {
+.countrySelector {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 48.82117%;
-  position: relative; }
-  .note:last-child {
+  width: 23.23176%;
+  margin-bottom: 3em;
+  margin-left: 1em; }
+  .countrySelector:last-child {
     margin-right: 0; }
+
+.container {
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3em; }
+  .container:before, .container:after {
+    content: " ";
+    display: table; }
+  .container:after {
+    clear: both; }
+
+.container1 {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  margin-top: 0em;
+  margin-bottom: 4em;
+  border-top: 2px solid #666;
+  border-bottom: 2px solid #666;
+  padding: 2em 0 2em 0;
+  width: 100%; }
+  .container1:last-child {
+    margin-right: 0; }
+  .container1 p {
+    text-align: center;
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 40.29137%;
+    margin-left: 30%; }
+    .container1 p:last-child {
+      margin-right: 0; }
+
+#hello {
+  text-align: center; }
+
+.infocol {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 31.76157%;
+  margin-bottom: 3em; }
+  .infocol:last-child {
+    margin-right: 0; }
+
+/*.map-fade {
+    display: block;
+    @include span-columns(12);
+    width: 100%;
+    height: 277px;
+    position: relative;
+    top: 0;
+    z-index: 10;
+    background: url(../img/fade.png);
+    background-image: url(../img/fade.png);
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: initial;
+} */
+#map {
+  padding-top: 60px;
+  margin-bottom: -60px;
+  margin-top: 1em;
+  height: 400px;
+  -webkit-border-image: url(../img/fade.png) 200 repeat;
+  -moz-border-image: url(../img/fade.png) 200 repeat;
+  -o-border-image: url(../img/fade.png) 200 repeat;
+  border-image: url(../img/fade.png) 200 repeat; }
 
 .info1 {
   height: 200px;
@@ -191,10 +292,150 @@ body {
 .index {
   padding-top: 30px; }
 
+/* --------------- Note viewer Styles ---- */
+.noteselect {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 65.88078%; }
+  .noteselect:last-child {
+    margin-right: 0; }
+  .noteselect li {
+    list-style: none;
+    display: inline;
+    margin: 0;
+    color: #666; }
+    .noteselect li a {
+      margin: 0;
+      padding: .5em;
+      color: #666;
+      -webkit-transition: color 0.1s ease-in 0s;
+      -moz-transition: color 0.1s ease-in 0s;
+      transition: color 0.1s ease-in 0s; }
+      .noteselect li a:hover {
+        color: rgba(250, 0, 0, 0.5);
+        border-bottom: 2px solid rgba(250, 0, 0, 0.5); }
+
+.currentNoteIndicator {
+  color: #666;
+  border-bottom: 2px solid #666;
+  -webkit-transition: color 0.1s ease-in 0s;
+  -moz-transition: color 0.1s ease-in 0s;
+  transition: color 0.1s ease-in 0s; }
+  .currentNoteIndicator:hover {
+    color: rgba(250, 0, 0, 0.5);
+    border-bottom: 2px solid #666; }
+
+#notearrows {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 31.76157%;
+  margin-right: 0;
+  text-align: right; }
+  #notearrows:last-child {
+    margin-right: 0; }
+
+.notearrow {
+  font-size: 2em;
+  color: #666;
+  padding: .5em;
+  -webkit-transition: color 0.1s ease-in 0s;
+  -moz-transition: color 0.1s ease-in 0s;
+  transition: color 0.1s ease-in 0s; }
+  .notearrow:hover {
+    color: rgba(250, 0, 0, 0.5); }
+
+.note {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 48.82117%; }
+  .note:last-child {
+    margin-right: 0; }
+
+.noteholder {
+  overflow-x: hidden;
+  width: 100%; }
+
+.noteposition {
+  position: relative;
+  right: 0;
+  -webkit-transition: right 0.3s ease-in 0s;
+  -moz-transition: right 0.3s ease-in 0s;
+  transition: right 0.3s ease-in 0s; }
+
+.notes {
+  width: 100000000px; }
+
+.notegroup {
+  float: left;
+  max-width: 60em;
+  margin-right: 10em;
+  position: relative; }
+
+/*================== bar graph styles ===*/
+.chart {
+  height: 200px;
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  position: relative; }
+  .chart:last-child {
+    margin-right: 0; }
+
+.bar {
+  width: 20%;
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  -webkit-transition: height 0.5s ease-in-out 0s;
+  -moz-transition: height 0.5s ease-in-out 0s;
+  transition: height 0.5s ease-in-out 0s;
+  position: absolute;
+  bottom: 0; }
+  .bar p {
+    text-align: center;
+    position: absolute;
+    bottom: 3%;
+    left: 20%;
+    color: white; }
+
+#bar1 {
+  right: 75%;
+  height: 30%; }
+  #bar1:hover {
+    height: 90%; }
+
+#bar2 {
+  right: 50%;
+  height: 60%; }
+  #bar2:hover {
+    height: 90%; }
+
+#bar3 {
+  right: 25%;
+  height: 70%; }
+  #bar3:hover {
+    height: 90%; }
+
+#bar4 {
+  right: 0%;
+  height: 45%; }
+  #bar4:hover {
+    height: 90%; }
+
 /* --------------- FLAG SECTION ( fetch background? )---- */
-.flag img {
-  padding-left: 10%;
-  padding-top: 10%; }
+.flag {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 74.41059%; }
+  .flag:last-child {
+    margin-right: 0; }
+  .flag img {
+    padding-left: 10%;
+    padding-top: 10%; }
 
 /* --------------- INFO BOX LEFT SIDE -------------------- */
 .info {
@@ -205,19 +446,28 @@ body {
   .info:last-child {
     margin-right: 0; }
 
+.notebio {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .notebio:last-child {
+    margin-right: 0; }
+
 /* --------------- FLAG AND CURRENCY ICON ---------------- */
 .icon {
   float: left;
   display: block;
-  margin-right: 10.1484%;
-  width: 44.9258%;
+  margin-right: 2.35765%;
+  width: 23.23176%;
   margin-right: 0;
   text-align: center;
-  height: 70px; }
+  line-height: 120px;
+  font-size: 90px; }
   .icon:last-child {
     margin-right: 0; }
   .icon h3 {
-    padding: 14px 0px 0px 10px; }
+    padding: 40px 0px 0px 10px; }
 
 /* --------------- INFO TEXTBOX UNDER FLAG/ICON ---------- */
 .text {
@@ -264,8 +514,10 @@ body {
     margin-top: -90px; }
 
 footer {
-  margin-top: 60px;
+  margin-top: 100px;
   height: 200px;
-  background-color: rgba(250, 0, 0, 0.5);
   width: 100%;
   z-index: 200; }
+  footer p {
+    text-align: center;
+    margin-top: 80px; }
