--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,58 +70,58 @@ a, a:hover, a:focus, a:active {
 /* Typography
 ------------------------------------------------------------ */
 body {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 13px;
+  line-height: 19.5px;
   color: #565555; }
 
 h1, .alpha {
-  font-size: 110px;
-  line-height: 120px;
+  font-size: 89px;
+  line-height: 97.5px;
   margin-top: 0px;
-  margin-bottom: 24px; }
+  margin-bottom: 19.5px; }
 
 h2, .beta {
-  font-size: 68px;
-  line-height: 72px;
+  font-size: 55px;
+  line-height: 58.5px;
   margin-top: 0px;
-  margin-bottom: 24px; }
+  margin-bottom: 19.5px; }
 
 h3, .gamma {
-  font-size: 42px;
-  line-height: 48px;
+  font-size: 34px;
+  line-height: 39px;
   margin-top: 0px;
-  margin-bottom: 24px; }
+  margin-bottom: 29.25px; }
 
 h4, .delta {
-  font-size: 26px;
-  line-height: 48px;
+  font-size: 21px;
+  line-height: 39px;
   margin-top: 0px;
   margin-bottom: 0px; }
 
 h5, .epsilon {
-  font-size: 26px;
-  line-height: 48px;
+  font-size: 21px;
+  line-height: 39px;
   margin-top: 0px;
   margin-bottom: 0px; }
 
 h6, .zeta {
-  font-size: 16px;
-  line-height: 24px;
-  margin-top: 24px;
-  margin-bottom: 24px; }
+  font-size: 13px;
+  line-height: 19.5px;
+  margin-top: 19.5px;
+  margin-bottom: 19.5px; }
 
 p, ul, ol {
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 13px;
+  line-height: 19.5px;
   margin-top: 0px;
-  margin-bottom: 24px;
+  margin-bottom: 19.5px;
   font-family: Arvo, sans-serif; }
 
 a {
-  font-size: 26px;
-  line-height: 48px;
+  font-size: 21px;
+  line-height: 39px;
   margin-top: 0px;
-  margin-bottom: 24px;
+  margin-bottom: 19.5px;
   font-family: Arvo, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -241,14 +241,16 @@ body {
       margin-right: 0; }
 
 #hello {
-  text-align: center; }
+  text-align: center;
+  text-shadow: 1px 1px 1px #fff; }
 
 .infocol {
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 31.76157%;
-  margin-bottom: 3em; }
+  margin-bottom: 3em;
+  text-align: center; }
   .infocol:last-child {
     margin-right: 0; }
 
@@ -376,12 +378,13 @@ body {
 
 /*================== bar graph styles ===*/
 .chart {
-  height: 200px;
+  height: 80px;
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 100%;
-  position: relative; }
+  position: relative;
+  margin-left: 2em; }
   .chart:last-child {
     margin-right: 0; }
 
@@ -403,7 +406,7 @@ body {
 
 #bar1 {
   right: 75%;
-  height: 30%; }
+  height: 80%; }
   #bar1:hover {
     height: 90%; }
 
@@ -426,16 +429,26 @@ body {
     height: 90%; }
 
 /* --------------- FLAG SECTION ( fetch background? )---- */
+.icons {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  margin-bottom: 2em; }
+  .icons:last-child {
+    margin-right: 0; }
+
 .flag {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 74.41059%; }
+  width: 65.88078%; }
   .flag:last-child {
     margin-right: 0; }
   .flag img {
-    padding-left: 10%;
-    padding-top: 10%; }
+    padding-left: 0;
+    padding-top: 10%;
+    max-width: 50%; }
 
 /* --------------- INFO BOX LEFT SIDE -------------------- */
 .info {
@@ -461,15 +474,18 @@ body {
   margin-right: 2.35765%;
   width: 23.23176%;
   margin-right: 0;
-  text-align: center;
-  line-height: 120px;
-  font-size: 90px; }
+  text-align: right;
+  text-shadow: 1px 1px 1px #fff;
+  line-height: 80px; }
   .icon:last-child {
     margin-right: 0; }
   .icon h3 {
     padding: 40px 0px 0px 10px; }
 
 /* --------------- INFO TEXTBOX UNDER FLAG/ICON ---------- */
+.currencyname {
+  text-shadow: 1px 1px 1px #fff; }
+
 .text {
   float: left;
   display: block;
@@ -481,6 +497,9 @@ body {
     margin-right: 0; }
   .text p {
     font-size: .9em; }
+
+.infolable {
+  text-shadow: 1px 1px 1px #fff; }
 
 /* --------------- GRAPH SECTION ------------------------- */
 .graphsection {
