add sticky header and adjustable promo height

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -150,18 +150,30 @@ body {
   box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.2); }
 
 #fixednav {
+  text-align: left;
   display: block;
   width: 710px;
   margin: 5 auto;
-  padding: 0px 25px;
   margin-top: 1em; }
   #fixednav ul {
     list-style-type: none; }
   #fixednav li {
     display: inline; }
 
-.divide {
-  padding-bottom: 3em; }
+.logo2 {
+  text-align: center;
+  height: 120px;
+  width: 120px;
+  background-image: url(../img/templogo.png);
+  overflow: hidden; }
+
+#countryName {
+  margin-left: 1em;
+  font-size: 2em; }
+
+.currencyname {
+  margin-left: 1em;
+  font-size: 2em; }
 
 .countrySelector {
   *zoom: 1;
@@ -177,15 +189,21 @@ body {
   .countrySelector:after {
     clear: both; }
 
-#header {
-  background-color: none;
-  height: 0;
-  z-index: 1; }
-
 .logo {
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
-  width: 80px;
-  height: 80px; }
+  height: 120px;
+  width: 120px;
+  background-image: url(../img/templogo.png);
+  margin-top: 0.3em; }
+  .logo:before, .logo:after {
+    content: " ";
+    display: table; }
+  .logo:after {
+    clear: both; }
 
 #select {
   *zoom: 1;
@@ -218,44 +236,56 @@ body {
   max-width: 60em;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1em; }
+  margin-top: 0em; }
   .container:before, .container:after {
     content: " ";
     display: table; }
   .container:after {
     clear: both; }
 
-.container1 {
+#promo {
   float: left;
   display: block;
   margin-right: 2.35765%;
   width: 100%;
   margin-top: -2em;
   margin-bottom: 4em;
-  padding: 15em 7em 9em 7em;
   width: 100%;
+  height: 100%;
   background-color: white;
-  height: 750px;
   background-image: url(../img/hero.png);
   background-position-x: 90%;
-  background-position-y: 45%;
-  background-repeat: none;
-  z-index: 2; }
-  .container1:last-child {
+  background-position-y: 95%;
+  background-repeat: none; }
+  #promo:last-child {
     margin-right: 0; }
 
 #hello {
   width: 70%;
   margin-left: 15%;
-  margin-top: 10%;
+  margin-top: 2em;
   color: white;
   text-align: center;
-  text-shadow: 1px 1px 1px #666; }
+  text-shadow: 1px 1px 1px #666;
+  padding-top: 3em; }
   #hello h3 {
     text-align: center; }
 
 #downwego {
-  margin-top: 5em; }
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  margin-top: 2em;
+  background-image: url(../img/downarrow.svg); }
+  #downwego:before, #downwego:after {
+    content: " ";
+    display: table; }
+  #downwego:after {
+    clear: both; }
 
 .infocol {
   float: left;
@@ -270,7 +300,7 @@ body {
     font-size: 1.5em; }
 
 #map {
-  padding-top: 0;
+  padding-top: 3em;
   margin-bottom: 0;
   margin-top: 0;
   height: 400px; }
@@ -594,6 +624,21 @@ footer {
     text-align: center;
     margin-top: 0;
     padding-bottom: em; }
+
+.logo2 {
+  *zoom: 1;
+  max-width: 60em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  height: 120px;
+  width: 120px;
+  background-image: url(../img/templogo.png); }
+  .logo2:before, .logo2:after {
+    content: " ";
+    display: table; }
+  .logo2:after {
+    clear: both; }
 
 #subfooter {
   bottom: 0;
