--- a/www/css/style.css
+++ b/www/css/style.css
@@ -174,13 +174,15 @@ body {
   margin-left: 1em;
   background-image: url(../img/uparrow.svg); }
 
-.logo2 {
-  text-align: center;
-  height: 100px;
-  width: 250px;
-  background-image: url(../img/logo.svg);
-  overflow: hidden; }
+/*.logo2 {
+    text-align: center;
+    height: 100px;
+    width: 100px;
+    background-image: url(../img/logo2.svg);
+    overflow: hidden;
 
+    //background-image: url(../img/templogo.png);
+}*/
 #countryName {
   margin-left: 1em;
   font-size: 2em; }
@@ -254,7 +256,7 @@ body {
   margin-right: 2.35765%;
   width: 100%;
   margin-top: -2em;
-  margin-bottom: 4em;
+  margin-bottom: 0em;
   width: 100%;
   height: 100%;
   background-color: white;
@@ -290,6 +292,11 @@ body {
     display: table; }
   #downwego:after {
     clear: both; }
+
+#scrollto {
+  background-color: #FFFFFF;
+  visibility: hidden;
+  margin-bottom: 3.7em; }
 
 .infocol {
   float: left;
@@ -343,11 +350,9 @@ body {
   font-size: 2em;
   cursor: pointer;
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   margin-top: 0em;
-  margin-right: 0;
   line-height: 2em;
-  border-bottom: 2px solid white;
   -webkit-transition: color 0.3s ease-in 0s;
   -moz-transition: color 0.3s ease-in 0s;
   transition: color 0.3s ease-in 0s; }
@@ -647,7 +652,7 @@ hr {
   #end:after {
     clear: both; }
   #end .est {
-    padding-top: 1em; }
+    padding-top: 0em; }
   #end ul {
     list-style-type: none;
     width: auto; }
@@ -672,8 +677,8 @@ footer {
   margin-right: auto;
   text-align: center;
   height: 100px;
-  width: 250px;
-  background-image: url(../img/logo.svg); }
+  width: 100px;
+  background-image: url(../img/logo2.svg); }
   .logo2:before, .logo2:after {
     content: " ";
     display: table; }
