--- a/www/css/style.css
+++ b/www/css/style.css
@@ -244,8 +244,8 @@ body {
   text-align: center;
   height: 100px;
   margin: 0 auto;
-  width: 400px;
-  background: no-repeat url("../img/logo.svg");
+  width: 250px;
+  background: no-repeat url("../img/logo.png");
   margin-top: 0.3em; }
 
 #select {
@@ -711,7 +711,7 @@ footer {
   text-align: center;
   height: 100px;
   width: 100px;
-  background-image: url(../img/logo2.svg); }
+  background-image: url(../img/logo2.png); }
   .logo2:before, .logo2:after {
     content: " ";
     display: table; }
