--- a/www/css/style.css
+++ b/www/css/style.css
@@ -140,13 +140,14 @@ body {
   position: relative; }
 
 #fixedbar {
-  display: none;
+  display: block;
   position: fixed;
   top: 0;
   width: 100%;
   height: 50px;
   z-index: 100;
-  background-color: rgba(255, 255, 255, 0.9); }
+  background-color: rgba(255, 255, 255, 0.9);
+  border-bottom: 1px solid #666; }
 
 #fixednav {
   *zoom: 1;
@@ -325,8 +326,6 @@ body {
 
 .map {
   position: relative;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
   box-shadow: 0px -20px inset rgba(0, 0, 0, 0.4); }
 
 .mapcontainer {
